--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-family: Geist, sans-serif;
-  background: linear-gradient(180deg, #EAF7FE, #ABDDF5, #B2D9EF, #ffffff);
+  background: linear-gradient(180deg, #abddf5, #ABDDF5, #B2D9EF, #ffffff);
   background-attachment: fixed;
   background-size: 100% 100%;
   color: #003669;
